Modify Ex 1 and Ex 2

--- a/JS DOM/1 - Les Objets/exercice - 01.html
+++ b/JS DOM/1 - Les Objets/exercice - 01.html
@@ -28,30 +28,38 @@
       /*
         2. Quelle est la taille du schmilblick ? Affichez dans une boite de dialogue la taille du schmilblick
       */
-      alert(schmilblick.taille);
+      console.log("la taille du schmilblick est " + schmilblick.taille);
       /*
         3. Quelle est la matière dont est composé le schmilblick ? Affichez dans une boite de dialogue la matière du schmilblik
       */
-
+      console.log("la matière du schmilblik est " + schmilblick.matiere);
       /*
         4. Quelle est la superficie du schmilblick ? Affichez dans une boite de dialogue la superficie du schmilblik (largeur x longeur)
       */
-
+      console.log(
+        "la superficie du schmilblik est " +
+          schmilblick.dimensions.largeur * schmilblick.dimensions.longueur
+      );
       /*
         5. De quel couleur est le schmilblick ? Affichez successivement dans des boites de dialogue les couleurs du schmilblick.
       */
-
+      for (var cle in schmilblick.couleurs) {
+        console.log(
+          "la couleur du schmilblik est " + schmilblick.couleurs[cle]
+        );
+      }
       /*
         6. Le schmilblick peut voler ! Changez la valeur de la propriété peutVoler du schmilblick (sans modifier la déclaration).
       */
-
+      schmilblick.peutVoler = true;
       /*
         7. Le schmilblick est magique ! Ajoutez une propriété estMagique au schmilblick avec comme valeur true (sans modifier la déclaration).
       */
-
+      schmilblick.estMagique = true;
       /*
         8. Exécutez la méthode queSuisJe du schmilblick.
       */
+      schmilblick.queSuisJe();
     </script>
   </head>
   <body>
