--- a/JS DOM/1 - Les Objets/exercice - 02.html
+++ b/JS DOM/1 - Les Objets/exercice - 02.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>JavaScript & DOM : Les Objets - Exercice 2</title>
     <script>
       //Énoncé :
@@ -9,85 +9,119 @@
         1. La déclaration JSON qui suit ne doit à aucun moment être modifiée.
       */
       var blender = {
-        mixerDesNombres: function(a, b, c){
-          if(typeof a == 'number' && typeof b == 'number' && typeof c == 'number'){
-            var d = (a * b) + c;
+        mixerDesNombres: function(a, b, c) {
+          if (
+            typeof a == "number" &&
+            typeof b == "number" &&
+            typeof c == "number"
+          ) {
+            var d = a * b + c;
             alert(d);
             return d;
-          }else{
-            alert('Les types de données fournis sont incorrects !');
-          };
+          } else {
+            alert("Les types de données fournis sont incorrects !");
+          }
         },
-        mixerDesChaines: function(i, j){
-          if(typeof i == 'string' && typeof j == 'string'){
-            var k = 'Bonjour ' + i + j + '!';
+        mixerDesChaines: function(i, j) {
+          if (typeof i == "string" && typeof j == "string") {
+            var k = "Bonjour " + i + j + "!";
             alert(k);
             return k;
-          }else{
-            alert('Les types de données fournis sont incorrects !');
-          };
+          } else {
+            alert("Les types de données fournis sont incorrects !");
+          }
         },
-        mixerDesBooleens: function(x, y, z){
-          if(typeof x == 'boolean' && typeof y == 'boolean' && typeof z == 'boolean'){
-            var message = '';
-            if(x && y && z){
-              message = 'Tout est vrai !';
-            }else{
-              message = 'Au moins un argument n\'est pas vrai !';
-            };
+        mixerDesBooleens: function(x, y, z) {
+          if (
+            typeof x == "boolean" &&
+            typeof y == "boolean" &&
+            typeof z == "boolean"
+          ) {
+            var message = "";
+            if (x && y && z) {
+              message = "Tout est vrai !";
+            } else {
+              message = "Au moins un argument n'est pas vrai !";
+            }
             alert(message);
             return message;
-          }else{
-            alert('Les types de données fournis sont incorrects !');
-          };
+          } else {
+            alert("Les types de données fournis sont incorrects !");
+          }
         },
-        mixerDesTableaux: function(g, z){
-          if(typeof g == 'object' && typeof z == 'object'){
+        mixerDesTableaux: function(g, z) {
+          if (typeof g == "object" && typeof z == "object") {
             var t = g[2] + z[1];
             var u = g[1] + z[2];
             var v = t * u;
-            alert('Si ceci : ' + v + ' est un nombre vous avez réussi !');
+            alert("Si ceci : " + v + " est un nombre vous avez réussi !");
             return v;
-          }else{
-            alert('Les types de données fournis sont incorrects !');
-          };
+          } else {
+            alert("Les types de données fournis sont incorrects !");
+          }
         },
-        mixerDesObjets: function(o, t){
-          if(typeof o == 'object' && typeof t == 'object'){
-             var p = (o.a * o.b) / (t.x * t.y);
-             alert('Si ceci : ' + p + ' est un nombre vous avez réussi !');
-             return p;
-          }else{
-            alert('Les types de données fournis sont incorrects !');
-          };
+        mixerDesObjets: function(o, t) {
+          if (typeof o == "object" && typeof t == "object") {
+            var p = (o.a * o.b) / (t.x * t.y);
+            alert("Si ceci : " + p + " est un nombre vous avez réussi !");
+            return p;
+          } else {
+            alert("Les types de données fournis sont incorrects !");
+          }
         },
-        mixerDesFonctions: function(z, w){
-          if(typeof z == 'function' && typeof w == 'function'){
+        mixerDesFonctions: function(z, w) {
+          if (typeof z == "function" && typeof w == "function") {
             z();
             w();
-            alert('Bravo ! Les types de données fournis sont corrects .');
-          }else{
-            alert('Les types de données fournis sont incorrects !');
-          };
+            alert("Bravo ! Les types de données fournis sont corrects .");
+          } else {
+            alert("Les types de données fournis sont incorrects !");
+          }
         },
-        mixerDeTout: function(k, l, m, n){
-          if(typeof k == 'string' && typeof l == 'object' && typeof m == 'function' && typeof n == 'number'){
-            alert('Voici un message : ' + k);
-            alert('Voici un message trouvé dans un objet : ' + l.message);
+        mixerDeTout: function(k, l, m, n) {
+          if (
+            typeof k == "string" &&
+            typeof l == "object" &&
+            typeof m == "function" &&
+            typeof n == "number"
+          ) {
+            alert("Voici un message : " + k);
+            alert("Voici un message trouvé dans un objet : " + l.message);
             m();
-            alert('Mais ceci est un nombre : ' + n);
+            alert("Mais ceci est un nombre : " + n);
             return n;
-          }else{
-            alert('Les types de données fournis sont incorrects !');
-          };
+          } else {
+            alert("Les types de données fournis sont incorrects !");
+          }
         }
       };
 
       //VOUS NE DEVEZ PAS MODIFIER CETTE DECLARATION EN REPONDANT AUX QUESTIONS QUI SUIVENT.
-      
+
       /*
         2. L'objet fourni ci-dessus contient plusieurs méthodes. Ces méthodes prennent en argument des valeurs et retournent d'autres valeurs. Exécutez chacune de ces méthodes en fournissant les bons types de données à l'exécution. 
       */
+      blender.mixerDesNombres(5, 6, 4);
+      blender.mixerDesChaines("chat", "chien");
+      blender.mixerDesBooleens(true, true, false);
+      blender.mixerDesTableaux([4, 8, 1], [5, 4, 6]);
+      blender.mixerDesObjets({ a: 45, b: 52 }, { x: 45, y: 52 });
+      blender.mixerDesFonctions(
+        function x() {
+          3 + 1;
+        },
+        function y() {
+          3 + 5;
+        }
+      );
+      blender.mixerDeTout(
+        "chat",
+        { message: "chat" },
+        function x() {
+          3 + 1;
+        },
+        5
+      );
     </script>
   </head>
   <body>
