--- a/JS DOM/1 - Les Objets/exercice - 08.html
+++ b/JS DOM/1 - Les Objets/exercice - 08.html
@@ -15,16 +15,17 @@
       /*
         2. Créez 1 objet JSON qui représente une chambre. Cet objet contient une propriété lit qui contient la chaîne de caractère matelas et une méthode quelEstMonAdresse qui ne contient pas d'instructions pour l'instant.
       */
-      let room = {
+      let chambre = {
         lit: "matelas",
-        quelEstMonAdresse: function() {
-          console.log("Mon adresse est : " + maison.adresse);
+        maison: maison,
+        quelleEstMonAdresse: function() {
+          console.log("Mon adresse est : " + this.maison.adresse);
         }
       };
       /*
         3. Mettez la référence à l'objet JSON qui représente la chambre dans la propriété chambre de l'objet JSON qui représente la maison.
       */
-      maison.chambre = room;
+      maison.chambre = chambre;
       /*
         4. Affichez dans une boite de dialogue le contenu de la propriété lit de l'objet représentant la chambre en partant de l'objet représentant la maison.
       */
@@ -36,7 +37,8 @@
         - Vous savez que le mot clé this fait référence à l'objet dans lequel le mot clé est employé.
         => Indice : vous devez créer une nouvelle propriété dans l'objet chambre dans laquelle vous mettrez une référence à l'objet maison.
       */
-      maison.chambre.quelEstMonAdresse();
+      chambre.maison = maison;
+      maison.chambre.quelleEstMonAdresse();
     </script>
   </head>
   <body>
