--- a/JS DOM/3 - Les Objets Fondamentaux/exercice - 01.html
+++ b/JS DOM/3 - Les Objets Fondamentaux/exercice - 01.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>JavaScript & DOM : Les Objets Fondamentaux - Exercice 1</title>
     <script>
       //Énoncé :
       /*
-        En JavaScript la plupart des fonctions de base du langage sont en réalité des méthodes disponibles dans des objets. On dispose par exemple, de base, d'un objet en mémoire dans la variable Math (voir le MDN à son sujet ici : https://developer.mozilla.org/fr/docs/Web/JavaScript/Reference/Objets_globaux/Math). Cette objet comporte un ensemble de méthodes pour réaliser des calculs mathématiques.
+              En JavaScript la plupart des fonctions de base du langage sont en réalité des méthodes disponibles dans des objets. On dispose par exemple, de base, d'un objet en mémoire dans la variable Math (voir le MDN à son sujet ici : https://developer.mozilla.org/fr/docs/Web/JavaScript/Reference/Objets_globaux/Math). Cette objet comporte un ensemble de méthodes pour réaliser des calculs mathématiques.
 
-        Exemple (issu de la documentation) :
+              Exemple (issu de la documentation) :
 
-          Méthode : Math.round()
+                Méthode : Math.round()
 
-          Retourne l'arrondi (entier) du réel passé en paramètre
-          Compatible :
+                Retourne l'arrondi (entier) du réel passé en paramètre
+                Compatible :
 
-          Syntaxe avec à gauche le type de données retournées : un entier, à droite, entre les parenthèses, le type de données à fournir : un "flottant" => un nombre à virgule.
+                Syntaxe avec à gauche le type de données retournées : un entier, à droite, entre les parenthèses, le type de données à fournir : un "flottant" => un nombre à virgule.
 
-          Integer Math.round(Float x)
+                Integer Math.round(Float x)
 
-          Description
-          Retourne l'arrondi (entier) du réel passé en paramètre
-      */
-      
-      /*
-        1. Obliger l'utilisateur à saisir un nombre. Afficher dans une boite de dialogue ce nombre mais arrondi (reprendre l'exercice que vous avez réalisé dans la partie JavaScript "procédural" et l'améliorer en utilisant l'objet Math).
-      */
+                Description
+                Retourne l'arrondi (entier) du réel passé en paramètre
+            */
 
       /*
-        2. Les méthodes .ceil() et .floor() de l'objet Math permettent quant à elles d'obtenir l'arrondi à l'inférieur et l'arrondi au supérieur. Afficher dans une boite de dialogue le nombre saisi arrondi à l'inférieur puis l'arrondi au supérieur.
-      */
+              1. Obliger l'utilisateur à saisir un nombre. Afficher dans une boite de dialogue ce nombre mais arrondi (reprendre l'exercice que vous avez réalisé dans la partie JavaScript "procédural" et l'améliorer en utilisant l'objet Math).
+            */
+      (function() {
+        let x = prompt("Saisissez un nombre flottant");
+        console.log(Math.round(x));
+      })();
+      /*
+              2. Les méthodes .ceil() et .floor() de l'objet Math permettent quant à elles d'obtenir l'arrondi à l'inférieur et l'arrondi au supérieur. Afficher dans une boite de dialogue le nombre saisi arrondi à l'inférieur puis l'arrondi au supérieur.
+            */
+
+      (function() {
+        let a = prompt("Saisissez un nombre flottant");
+        console.log(
+          "Votre nombre arrondi au supérieur : " + Math.ceil(a),
+          " Votre nombre arrondi à l'inférieur : " + Math.floor(a)
+        );
+      })();
     </script>
   </head>
   <body>
