--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 06.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 06.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>JavaScript & DOM : Le Modèle Objet du Document - Exercice 6</title>
     <script>
       //Énoncé :
@@ -10,14 +10,20 @@
         
         Les éléments HTML du document Web sont lus et chargés en mémoire par le navigateur Internet. Le navigateurs Internet charge les éléments HTML sous la forme d'objets en mémoire, comme on a pu le constater dans l'exercice précédent. Les noms des propriétés de ces objets correspondent aux noms des attributs HTML des balises (à quelques exceptions près). Les objets de type HTMLElement sont documentés ici dans le MDN : https://developer.mozilla.org/fr/docs/Web/API/HTMLElement
       */
-      
+
       /*
         1. Écrivez l'algorithme suivant : AU CLIC sur le titre de la première section, renseignez les attributs href ainsi que les attributs title des 2 liens dans les deux paragraphes qui suivent.
       */
-
+      let f = () => {
+        console.log(document.getElementsByTagNameNS("a"));
+        console.log(document.getElementsByTagName("h"));
+      };
       /*
         2. Écrivez l'algorithme suivant : AU CLIC sur le titre de la deuxième section, mettez une fonction dans l'attribut onclick du deuxième paragraphe de la section.
       */
+      let f1 = () => {
+        document.getElementById("") = onclick;
+      };
     </script>
   </head>
   <body>
@@ -28,12 +34,18 @@
       <li>Troisième point</li>
     </ul>
     <div>
-      <h2><span>1</span>. Titre de la première section</h2>
-      <p><span>1.1</span>. Premier paragraphe de la première section et un <a href="#">lien</a>.</p>
-      <p><span>1.2</span>. Deuxième paragraphe de la deuxième section et un <a href="#">lien</a>.</p>
+      <h2 onclick="f()"><span>1</span>. Titre de la première section</h2>
+      <p>
+        <span>1.1</span>. Premier paragraphe de la première section et un
+        <a href="#">lien</a>.
+      </p>
+      <p>
+        <span>1.2</span>. Deuxième paragraphe de la deuxième section et un
+        <a href="#">lien</a>.
+      </p>
     </div>
     <div>
-      <h2><span>2</span>. Titre de la deuxième section</h2>
+      <h2 onclick="f1()"><span>2</span>. Titre de la deuxième section</h2>
       <p><span>2.1</span>. Premier paragraphe de la deuxième section.</p>
       <p><span>2.2</span>. Deuxième paragraphe de la deuxième section.</p>
     </div>
