--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 06.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 06.html
@@ -7,23 +7,38 @@
       //Énoncé :
       /*
         En JavaScript, on a accès à des objets qui contiennent les informations relatives au navigateurs Internet : le DOM. L'objet qui permet d'accéder au DOM est l'objet window. Cet objet est l'objet de plus haut niveau en JavaScript. L'objet window contient des sous objets que nous allons exploiter.
-        
+
         Les éléments HTML du document Web sont lus et chargés en mémoire par le navigateur Internet. Le navigateurs Internet charge les éléments HTML sous la forme d'objets en mémoire, comme on a pu le constater dans l'exercice précédent. Les noms des propriétés de ces objets correspondent aux noms des attributs HTML des balises (à quelques exceptions près). Les objets de type HTMLElement sont documentés ici dans le MDN : https://developer.mozilla.org/fr/docs/Web/API/HTMLElement
       */
 
       /*
         1. Écrivez l'algorithme suivant : AU CLIC sur le titre de la première section, renseignez les attributs href ainsi que les attributs title des 2 liens dans les deux paragraphes qui suivent.
       */
-      let f = () => {
-        console.log(document.getElementsByTagNameNS("a"));
-        console.log(document.getElementsByTagName("h"));
+      let liens;
+      let clickMe = () => {
+        let liens = document.getElementsByTagName("a");
+        let href = liens.getAttribute("href");
+        alert(href);
+
+        /*for (var i = 0, c = liens.length; i < c; i++) {
+          console.log(liens[i].href);
+          console.log(liens[i].title);
+          console.log(
+            "Element n° " +
+              (i + 1) +
+              " : " +
+              liens[i].href +
+              " title" +
+              liens[i].title
+          );
+        }*/
       };
       /*
         2. Écrivez l'algorithme suivant : AU CLIC sur le titre de la deuxième section, mettez une fonction dans l'attribut onclick du deuxième paragraphe de la section.
       */
-      let f1 = () => {
-        document.getElementById("") = onclick;
-      };
+      /*let clickMe2 = () => {
+        document.getElementsByTagName("p"). = onclick;
+      };*/
     </script>
   </head>
   <body>
@@ -34,10 +49,10 @@
       <li>Troisième point</li>
     </ul>
     <div>
-      <h2 onclick="f()"><span>1</span>. Titre de la première section</h2>
+      <h2 onclick="clickMe()"><span>1</span>. Titre de la première section</h2>
       <p>
         <span>1.1</span>. Premier paragraphe de la première section et un
-        <a href="#">lien</a>.
+        <a href="">lien</a>.
       </p>
       <p>
         <span>1.2</span>. Deuxième paragraphe de la deuxième section et un
@@ -45,7 +60,7 @@
       </p>
     </div>
     <div>
-      <h2 onclick="f1()"><span>2</span>. Titre de la deuxième section</h2>
+      <h2 onclick="clickMe2()"><span>2</span>. Titre de la deuxième section</h2>
       <p><span>2.1</span>. Premier paragraphe de la deuxième section.</p>
       <p><span>2.2</span>. Deuxième paragraphe de la deuxième section.</p>
     </div>
