--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 06.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 06.html
@@ -17,7 +17,7 @@
       let liens;
       let clickMe = () => {
         let liens = document.getElementsByTagName("a");
-        let href = liens.getAttribute("href");
+        let href[0] = liens[0].getAttribute("href");
         alert(href);
 
         /*for (var i = 0, c = liens.length; i < c; i++) {
