--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 07.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 07.html
@@ -20,8 +20,15 @@
       /*
         1. Créez une classe CSS qui spécifie plusieurs propriétés de style pour une <div> correspondant à une section. Ecrivez l'algorithme suivant : AU SURVOL sur une <div>, lui attribuer la classe CSS créée. QUANT ON NE SURVOLE PLUS la <div>, lui retirer la classe CSS créée.
       */
-      let f = () => {
-        document.getElementsById("div").className = "rose";
+
+      let element = document.querySelector("div");
+      element.className = "rose";
+      console.log(element, element.className);
+      element.onmouseover = function() {
+        element.classList.toggle("rose");
+      };
+      element.onmouseout = function() {
+        element.classList.toggle("rose");
       };
     </script>
   </head>
@@ -32,7 +39,7 @@
       <li>Deuxième point</li>
       <li>Troisième point</li>
     </ul>
-    <div id="div" onmouseover="f()">
+    <div>
       <h2><span>1</span>. Titre de la première section</h2>
       <p>
         <span>1.1</span>. Premier paragraphe de la première section et un
@@ -43,12 +50,12 @@
         <a href="#">lien</a>.
       </p>
     </div>
-    <div id="div" onmouseover="f()">
+    <div>
       <h2><span>2</span>. Titre de la deuxième section</h2>
       <p><span>2.1</span>. Premier paragraphe de la deuxième section.</p>
       <p><span>2.2</span>. Deuxième paragraphe de la deuxième section.</p>
     </div>
-    <div id="div" onmouseover="f()">
+    <div>
       <h2><span>3</span>. Titre de la troisième section</h2>
       <p><span>3.1</span>. Premier paragraphe de la troisième section.</p>
       <p><span>3.2</span>. Deuxième paragraphe de la troisième section.</p>
