--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 07.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 07.html
@@ -22,14 +22,14 @@
       */
 
       let element = document.querySelector("div");
-      //element.className = "rose";
-      //console.log(element, element.className);
+      /*element.className = "rose";
+      console.log(element, element.className);
       element.onmouseover = function() {
         element.classList.toggle("rose");
       };
       element.onmouseout = function() {
         element.classList.toggle("rose");
-      };
+      };*/
     </script>
   </head>
   <body>
