Add sollutions to exercises

--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 04.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 04.html
@@ -14,7 +14,9 @@
       /*
       1. La propriété body du sous objet document de l'objet window contient l'objet correspondant à la balise body du document Web affiché. Affichez le contenu de la propriété body à l'aide de la méthode .log() du sous objet console.
       */
+     //deux variants sont possible:
       //console.log(window.document.body);
+      //window.console.log(document.body);
       /*
       2. Vous avez pu constater que cette propriété contient null. En effet, lorsque votre script est exécuté, le navigateur n'A PAS ENCORE LU ET CHARGE la suite du document. A partir de maintenant vous avez 2 possibilités :
         - Soit vous programmez dans une balise script que vous positionnerez juste avant la balise body fermante
@@ -28,7 +30,9 @@
       /*
       4. La propriété body contient donc un objet de type HTMLBodyElement. Affectez la chaîne de caractère 'lime' à la propriété bgColor de l'objet référencé dans la propriété body.
       */
-      document.bgColor = "lime";
+      console.dir(HTMLBodyElement);
+      HTMLBodyElement.bgColor = "lime";
+
     </script>
   </head>
   <body>
@@ -55,6 +59,7 @@
     </div>
     <script>
       console.log(window.document.body);
+      window.console.log(document.body);
     </script>
   </body>
 </html>
