--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 13.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 13.html
@@ -38,5 +38,15 @@
         <p><span>3.2</span>. Deuxième paragraphe de la troisième section.</p>
       </div>
     </div>
+    <script>
+      let titre = document.querySelector('h1');
+      setInterval(() => { 
+      let computedStyles = getComputedStyle(titre);
+      let opacity = computedStyles.opacity;
+      console.log(opacity);
+      titre.style.opacity = opacity - 0.05;
+      console.log(titre.style.opacity);
+      }, 200);
+    </script> 
   </body>
 </html>
