--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 17.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 17.html
@@ -34,7 +34,7 @@
       <div>
         <h2><span>2</span>. Titre de la deuxième section</h2>
         <p><span>2.1</span>. Premier paragraphe de la deuxième section et un <a href="#">lien</a>.</p>
-        <p><span>2.2</span>. Deuxième paragraphe de la deuxième section et un <a href="#">lien</a>.</p>
+        <p><span id="span2.2">2.2</span>. Deuxième paragraphe de la deuxième section et un <a href="#">lien</a>.</p>
       </div>
       <div>
         <h2><span>3</span>. Titre de la troisième section</h2>
@@ -42,5 +42,15 @@
         <p><span>3.2</span>. Deuxième paragraphe de la troisième section et un <a href="#">lien</a>.</p>
       </div>
     </div>
+    <script> 
+      let imagePaste = function () {
+      let element = document.createElement('img');
+      element.setAttribute("title", "cat");
+      element.setAttribute("src", "../cat.png");
+      element.setAttribute("alt", "cat");
+      element.style.width = "300px";
+      document.getElementById('span2.2').appendChild(element);}
+      document.querySelector('h1').onclick = imagePaste;
+    </script>
   </body>
 </html>
