--- a/JS DOM/4 - Le Modele Objet du Document/exercice - 12.html
+++ b/JS DOM/4 - Le Modele Objet du Document/exercice - 12.html
@@ -38,5 +38,15 @@
         <p><span>3.2</span>. Deuxième paragraphe de la troisième section.</p>
       </div>
     </div>
+    <script>
+      let titre = document.querySelector('h1');
+      setInterval(() => {
+      let computedStyles = getComputedStyle(titre);
+      let marginLeft = parseInt(computedStyles.marginLeft);
+      console.log(marginLeft);
+      titre.style.marginLeft = marginLeft + 2 + "px";
+      console.log(titre.style.marginLeft);
+      }, 200); 
+    </script>  
   </body>
 </html>
